<resources>
    <string name="app_name">Blood Bank Mobile Application</string>
    <string name="appointment">Appointment</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Location">Location</string>
    <string name="Confirm">Confirm</string>
    <string name="password">Password</string>
    <string name="selectgroup">Select Blood Group</string>
    <string name="Search">Search</string>
    <string name="Dashboard">Dashboard</string>
    <string name="bloodtxt1">Blood is mean to circulate. Pass it around</string>
    <string name="Requestblood">Request blood</string>
    <string name="BloodDonate">Blood Donate</string>
    <string name="BloodBank">Blood Bank</string>
    <string name="Settings">Settings</string>
    <string name="SignIn">Sign In</string>
    <string name="Email">Email</string>
    <string name="ForgetPassword">Forget Password?</string>
    <string name="SignUp">Sign Up</string>
    <string name="GetStarted">Get Started</string>
    <string name="Profile">Profile</string>
    <string name="FullName">Full Name</string>
    <string name="Name">Name</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="Address">Address</string>
    <string name="DateOfBirth">Date Of Birth</string>
    <string name="BloodGroup">Blood Group</string>
    <string name="logout">Log Out</string>
    <string name="Confirmpw">Confirm Password</string>

</resources>