<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="45dp"
        android:layout_height="44dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="51dp"
        android:layout_height="45dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_logout_24" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="28dp"
        android:text="@string/Profile"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="96dp"
        android:layout_height="75dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />


    <TextView
        android:id="@+id/fullNameTextView"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="124dp"
        android:text="@string/FullName"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="216dp"
        android:text="@string/Email"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="308dp"
        android:text="@string/MobileNumber"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirmPasswordTextView"
        android:layout_width="185dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="572dp"
        android:text="@string/BloodGroup"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextTextName"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="156dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="328dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="332dp"
        android:ems="10"
        android:hint="@string/MobileNumber"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextAddress"
        android:layout_width="327dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="412dp"
        android:ems="10"
        android:hint="@string/Address"
        android:inputType="textPostalAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextDateOfBirth"
        android:layout_width="325dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="508dp"
        android:ems="10"
        android:hint="yyyy/mm/dd"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextBlood"
        android:layout_width="323dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="600dp"
        android:ems="10"
        android:hint="@string/BloodGroup"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="331dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="248dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="103dp"
        android:layout_height="48dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="664dp"
        android:backgroundTint="#C61515"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="185dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="384dp"
        android:text="@string/Address"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="185dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="480dp"
        android:text="@string/DateOfBirth"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>