<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="45dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="51dp"
        android:layout_height="45dp"
        android:layout_marginStart="324dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/search" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginTop="52dp"
        android:text="@string/SignUp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="122dp"
        android:layout_height="112dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="84dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/Logo" />


    <TextView
        android:id="@+id/fullNameTextView"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="196dp"
        android:text="@string/FullName"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="288dp"
        android:text="@string/Email"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="384dp"
        android:text="@string/password"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirmPasswordTextView"
        android:layout_width="185dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="476dp"
        android:text="@string/Confirmpw"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="644dp"
        android:text="Already have an account?"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="644dp"
        android:text="@string/SignIn"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextName"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="224dp"
        android:ems="10"
        android:hint="password"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="332dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="416dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword1"
        android:layout_width="326dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="504dp"
        android:ems="10"
        android:hint="@string/Confirmpw"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="329dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="316dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="154dp"
        android:layout_height="63dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="580dp"
        android:backgroundTint="#C61515"
        android:text="@string/SignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>